app/assets/stylesheets/pages/issuable.scss
.issuable-warning-icon {
  background-color: $orange-100;
  border-radius: $border-radius-default;
  width: $issuable-warning-size;
  height: $issuable-warning-size;
  text-align: center;
  margin-right: $issuable-warning-icon-margin;
  line-height: $gl-line-height-24;

  .icon {
    fill: $orange-600;
    vertical-align: text-bottom;
  }
}

.limit-container-width {
  .detail-page-header,
  .page-content-header,
  .commit-box,
  .info-well,
  .commit-ci-menu,
  .files-changed-inner,
  .limited-header-width,
  .limited-width-notes {
    @include fixed-width-container;
  }

  .issuable-details {
    .detail-page-description,
    .mr-source-target,
    .mr-state-widget,
    .merge-manually {
      @include fixed-width-container;
    }
  }

  .merge-request-details {
    .emoji-list-container {
      @include fixed-width-container;
    }
  }
}

.issuable-details {
  section {
    .issuable-discussion {
      margin-right: 1px;
    }
  }

  .title-container {
    display: flex;
  }

  .title {
    padding: 0;
    margin-bottom: $gl-padding;
    border-bottom: 0;
    word-wrap: break-word;
    overflow-wrap: break-word;
    min-width: 0;
    width: 100%;
    text-align: initial;
  }

  .btn-edit {
    margin-left: auto;
    height: $gl-padding * 2;
  }

  .emoji-block {
    padding: $gl-padding-4 0;

    @include media-breakpoint-down(md) {
      padding: $gl-padding-8 0;
    }
  }
}

.issuable-filter-count {
  span {
    display: block;
    margin-bottom: -16px;
    padding: 13px 0;
  }
}

.issuable-show-labels {
  .gl-label {
    margin-bottom: 5px;
    margin-right: 5px;
  }

  a {
    display: inline-block;

    .color-label {
      padding: 4px $grid-size;
      border-radius: $label-border-radius;
      margin-right: 4px;
      margin-bottom: 4px;
    }

    &:hover .color-label {
      text-decoration: underline;
    }
  }

  &.has-labels {
    // this font size is a fix to
    // prevent unintended spacing between labels
    // which shows up when rendering markup has white-space
    // characters present.
    // see: https://css-tricks.com/fighting-the-space-between-inline-block-elements/#article-header-id-3
    font-size: 0;
    margin-bottom: -5px;
  }

  .scoped-label-wrapper {
    > a {
      max-width: 100%;
    }

    .color-label {
      padding-right: $gl-padding-24;
    }

    .scoped-label {
      right: 12px;
    }
  }
}

.assignee {
  .merge-icon {
    color: $orange-500;
    position: absolute;
    bottom: 0;
    right: 0;
    text-shadow: -1px -1px 0 $white, 1px -1px 0 $white, -1px 1px 0 $white, 1px 1px 0 $white;
  }
}
/* ... */

